cleaned up nba_finals notebook to remove unnamed row headers and converted year to int from float

--- a/nba_finals.ipynb
+++ b/nba_finals.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 6
     }
    ],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead tr th {\n        text-align: left;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr>\n      <th></th>\n      <th>Unnamed: 0_level_0</th>\n      <th>Unnamed: 1_level_0</th>\n      <th colspan=\"3\" halign=\"left\">Finals</th>\n      <th>Unnamed: 5_level_0</th>\n      <th colspan=\"4\" halign=\"left\">Playoffs Top Performers</th>\n    </tr>\n    <tr>\n      <th></th>\n      <th>Year</th>\n      <th>Lg</th>\n      <th>Champion</th>\n      <th>Runner-Up</th>\n      <th>Finals MVP</th>\n      <th>Unnamed: 5_level_1</th>\n      <th>Points</th>\n      <th>Rebounds</th>\n      <th>Assists</th>\n      <th>Win Shares</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020.0</td>\n      <td>NBA</td>\n      <td>Los Angeles Lakers</td>\n      <td>Miami Heat</td>\n      <td>L. James</td>\n      <td>NaN</td>\n      <td>A. Davis (582)</td>\n      <td>L. James (226)</td>\n      <td>L. James (184)</td>\n      <td>A. Davis (4.5)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019.0</td>\n      <td>NBA</td>\n      <td>Toronto Raptors</td>\n      <td>Golden State Warriors</td>\n      <td>K. Leonard</td>\n      <td>NaN</td>\n      <td>K. Leonard (732)</td>\n      <td>D. Green (223)</td>\n      <td>D. Green (187)</td>\n      <td>K. Leonard (4.9)</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2018.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>NaN</td>\n      <td>L. James (748)</td>\n      <td>D. Green (222)</td>\n      <td>L. James (198)</td>\n      <td>L. James (5.2)</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>NaN</td>\n      <td>L. James (591)</td>\n      <td>K. Love (191)</td>\n      <td>L. James (141)</td>\n      <td>L. James (4.3)</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016.0</td>\n      <td>NBA</td>\n      <td>Cleveland Cavaliers</td>\n      <td>Golden State Warriors</td>\n      <td>L. James</td>\n      <td>NaN</td>\n      <td>K. Thompson (582)</td>\n      <td>D. Green (228)</td>\n      <td>R. Westbrook (198)</td>\n      <td>L. James (4.7)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 7
     }
    ],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 8
     }
    ],
    "source": [
@@ -177,35 +177,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['Year', 'Lg', 'Champion', 'Runner-Up', 'Finals MVP',\n",
+       "       'Unnamed: 5_level_1', 'Points', 'Rebounds', 'Assists', 'Win Shares'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
-    "# checking\n",
+    "# checking next level if it has the column headers I want\n",
     "df.columns.get_level_values(1) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Year   Lg               Champion              Runner-Up  Finals MVP  \\\n",
+       "0  2020.0  NBA     Los Angeles Lakers             Miami Heat    L. James   \n",
+       "1  2019.0  NBA        Toronto Raptors  Golden State Warriors  K. Leonard   \n",
+       "2  2018.0  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "3  2017.0  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "4  2016.0  NBA    Cleveland Cavaliers  Golden State Warriors    L. James   \n",
+       "\n",
+       "   Unnamed: 5_level_1             Points        Rebounds             Assists  \\\n",
+       "0                 NaN     A. Davis (582)  L. James (226)      L. James (184)   \n",
+       "1                 NaN   K. Leonard (732)  D. Green (223)      D. Green (187)   \n",
+       "2                 NaN     L. James (748)  D. Green (222)      L. James (198)   \n",
+       "3                 NaN     L. James (591)   K. Love (191)      L. James (141)   \n",
+       "4                 NaN  K. Thompson (582)  D. Green (228)  R. Westbrook (198)   \n",
+       "\n",
+       "         Win Shares  \n",
+       "0    A. Davis (4.5)  \n",
+       "1  K. Leonard (4.9)  \n",
+       "2    L. James (5.2)  \n",
+       "3    L. James (4.3)  \n",
+       "4    L. James (4.7)  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Lg</th>\n      <th>Champion</th>\n      <th>Runner-Up</th>\n      <th>Finals MVP</th>\n      <th>Unnamed: 5_level_1</th>\n      <th>Points</th>\n      <th>Rebounds</th>\n      <th>Assists</th>\n      <th>Win Shares</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020.0</td>\n      <td>NBA</td>\n      <td>Los Angeles Lakers</td>\n      <td>Miami Heat</td>\n      <td>L. James</td>\n      <td>NaN</td>\n      <td>A. Davis (582)</td>\n      <td>L. James (226)</td>\n      <td>L. James (184)</td>\n      <td>A. Davis (4.5)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019.0</td>\n      <td>NBA</td>\n      <td>Toronto Raptors</td>\n      <td>Golden State Warriors</td>\n      <td>K. Leonard</td>\n      <td>NaN</td>\n      <td>K. Leonard (732)</td>\n      <td>D. Green (223)</td>\n      <td>D. Green (187)</td>\n      <td>K. Leonard (4.9)</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2018.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>NaN</td>\n      <td>L. James (748)</td>\n      <td>D. Green (222)</td>\n      <td>L. James (198)</td>\n      <td>L. James (5.2)</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>NaN</td>\n      <td>L. James (591)</td>\n      <td>K. Love (191)</td>\n      <td>L. James (141)</td>\n      <td>L. James (4.3)</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016.0</td>\n      <td>NBA</td>\n      <td>Cleveland Cavaliers</td>\n      <td>Golden State Warriors</td>\n      <td>L. James</td>\n      <td>NaN</td>\n      <td>K. Thompson (582)</td>\n      <td>D. Green (228)</td>\n      <td>R. Westbrook (198)</td>\n      <td>L. James (4.7)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "source": [
     "# used droplevel to remove level at index 0. Once i ran it it was done and can't drop it again.\n",
-    "# df.droplevel(0, axis=1)"
+    "df = df.droplevel(0, axis=1)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "     Year   Lg               Champion              Runner-Up  Finals MVP  \\\n",
+       "0  2020.0  NBA     Los Angeles Lakers             Miami Heat    L. James   \n",
+       "1  2019.0  NBA        Toronto Raptors  Golden State Warriors  K. Leonard   \n",
+       "2  2018.0  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "3  2017.0  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "4  2016.0  NBA    Cleveland Cavaliers  Golden State Warriors    L. James   \n",
+       "\n",
+       "              Points        Rebounds             Assists        Win Shares  \n",
+       "0     A. Davis (582)  L. James (226)      L. James (184)    A. Davis (4.5)  \n",
+       "1   K. Leonard (732)  D. Green (223)      D. Green (187)  K. Leonard (4.9)  \n",
+       "2     L. James (748)  D. Green (222)      L. James (198)    L. James (5.2)  \n",
+       "3     L. James (591)   K. Love (191)      L. James (141)    L. James (4.3)  \n",
+       "4  K. Thompson (582)  D. Green (228)  R. Westbrook (198)    L. James (4.7)  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Lg</th>\n      <th>Champion</th>\n      <th>Runner-Up</th>\n      <th>Finals MVP</th>\n      <th>Points</th>\n      <th>Rebounds</th>\n      <th>Assists</th>\n      <th>Win Shares</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020.0</td>\n      <td>NBA</td>\n      <td>Los Angeles Lakers</td>\n      <td>Miami Heat</td>\n      <td>L. James</td>\n      <td>A. Davis (582)</td>\n      <td>L. James (226)</td>\n      <td>L. James (184)</td>\n      <td>A. Davis (4.5)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019.0</td>\n      <td>NBA</td>\n      <td>Toronto Raptors</td>\n      <td>Golden State Warriors</td>\n      <td>K. Leonard</td>\n      <td>K. Leonard (732)</td>\n      <td>D. Green (223)</td>\n      <td>D. Green (187)</td>\n      <td>K. Leonard (4.9)</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2018.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>L. James (748)</td>\n      <td>D. Green (222)</td>\n      <td>L. James (198)</td>\n      <td>L. James (5.2)</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017.0</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>L. James (591)</td>\n      <td>K. Love (191)</td>\n      <td>L. James (141)</td>\n      <td>L. James (4.3)</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016.0</td>\n      <td>NBA</td>\n      <td>Cleveland Cavaliers</td>\n      <td>Golden State Warriors</td>\n      <td>L. James</td>\n      <td>K. Thompson (582)</td>\n      <td>D. Green (228)</td>\n      <td>R. Westbrook (198)</td>\n      <td>L. James (4.7)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# now that unamed row was removed, we now want to remove 'unnamed' columns with NaN values in the dataframe \n",
+    "# found solution here: https://stackoverflow.com/questions/43983622/remove-unnamed-columns-in-pandas-dataframe/43983654 see 5 & 6\n",
+    "df.rename({\"Unnamed: 5_level_1\":\"a\"}, axis=\"columns\", inplace=True)\n",
+    "df.drop([\"a\"], axis=1, inplace=True)\n",
+    "df.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now that unamed row was removed, we now want to remove 'unnamed columns with NaN values in the dataframe \n",
-    "# https://stackoverflow.com/questions/43983622/remove-unnamed-columns-in-pandas-dataframe/43983654 see 5 & 6\n",
-    "df.rename({\"Unnamed: 5_level_1\":\"a\"}, axis=\"columns\", inplace=True)\n",
-    "df.drop([\"a\"], axis=1, inplace=True)\n",
-    "df.head()\n"
+    "# drop rows with NaN in them\n",
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Year           int64\n",
+       "Lg            object\n",
+       "Champion      object\n",
+       "Runner-Up     object\n",
+       "Finals MVP    object\n",
+       "Points        object\n",
+       "Rebounds      object\n",
+       "Assists       object\n",
+       "Win Shares    object\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-35-91b4af12fd7e>:1: SettingWithCopyWarning: \nA value is trying to be set on a copy of a slice from a DataFrame.\nTry using .loc[row_indexer,col_indexer] = value instead\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n  df['Year'] = df['Year'].astype(int)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Year'] = df['Year'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Year   Lg               Champion              Runner-Up  Finals MVP  \\\n",
+       "0  2020  NBA     Los Angeles Lakers             Miami Heat    L. James   \n",
+       "1  2019  NBA        Toronto Raptors  Golden State Warriors  K. Leonard   \n",
+       "2  2018  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "3  2017  NBA  Golden State Warriors    Cleveland Cavaliers   K. Durant   \n",
+       "4  2016  NBA    Cleveland Cavaliers  Golden State Warriors    L. James   \n",
+       "\n",
+       "              Points        Rebounds             Assists        Win Shares  \n",
+       "0     A. Davis (582)  L. James (226)      L. James (184)    A. Davis (4.5)  \n",
+       "1   K. Leonard (732)  D. Green (223)      D. Green (187)  K. Leonard (4.9)  \n",
+       "2     L. James (748)  D. Green (222)      L. James (198)    L. James (5.2)  \n",
+       "3     L. James (591)   K. Love (191)      L. James (141)    L. James (4.3)  \n",
+       "4  K. Thompson (582)  D. Green (228)  R. Westbrook (198)    L. James (4.7)  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Year</th>\n      <th>Lg</th>\n      <th>Champion</th>\n      <th>Runner-Up</th>\n      <th>Finals MVP</th>\n      <th>Points</th>\n      <th>Rebounds</th>\n      <th>Assists</th>\n      <th>Win Shares</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2020</td>\n      <td>NBA</td>\n      <td>Los Angeles Lakers</td>\n      <td>Miami Heat</td>\n      <td>L. James</td>\n      <td>A. Davis (582)</td>\n      <td>L. James (226)</td>\n      <td>L. James (184)</td>\n      <td>A. Davis (4.5)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2019</td>\n      <td>NBA</td>\n      <td>Toronto Raptors</td>\n      <td>Golden State Warriors</td>\n      <td>K. Leonard</td>\n      <td>K. Leonard (732)</td>\n      <td>D. Green (223)</td>\n      <td>D. Green (187)</td>\n      <td>K. Leonard (4.9)</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2018</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>L. James (748)</td>\n      <td>D. Green (222)</td>\n      <td>L. James (198)</td>\n      <td>L. James (5.2)</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2017</td>\n      <td>NBA</td>\n      <td>Golden State Warriors</td>\n      <td>Cleveland Cavaliers</td>\n      <td>K. Durant</td>\n      <td>L. James (591)</td>\n      <td>K. Love (191)</td>\n      <td>L. James (141)</td>\n      <td>L. James (4.3)</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2016</td>\n      <td>NBA</td>\n      <td>Cleveland Cavaliers</td>\n      <td>Golden State Warriors</td>\n      <td>L. James</td>\n      <td>K. Thompson (582)</td>\n      <td>D. Green (228)</td>\n      <td>R. Westbrook (198)</td>\n      <td>L. James (4.7)</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
