created an html page for the dataframes to include in our final webpage

--- a/nba_finals.ipynb
+++ b/nba_finals.ipynb
@@ -368,6 +368,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exporting nba_finals dataframe to html\n",
+    "df.to_html(\"nba_finals.htm\", index=False)\n",
+    "html_file = df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -388,6 +399,71 @@
     "losers = df.iloc[:,[0,3]]\n",
     "# winners['Finals'].value_counts()\n",
     "losers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in the csv\n",
+    "draft = pd.read_csv('Resources/NBA_Full_Draft_1947-2018.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename the unnamed column to 'a' so I can delete the column\n",
+    "draft.rename({\"Unnamed: 0\":\"a\"}, axis=\"columns\", inplace=True)\n",
+    "draft.drop([\"a\"], axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  Team            Player                         College  Play_Yrs  Games  \\\n",
+       "0  PIT  Clifton McNeeley  University of Texas at El Paso       NaN    NaN   \n",
+       "1  TRH        Glen Selbo         University of Wisconsin       1.0   13.0   \n",
+       "2  BOS      Bulbs Ehlers               Purdue University       2.0   99.0   \n",
+       "3  PRO        Walt Dropo       University of Connecticut       NaN    NaN   \n",
+       "4  NYK        Dick Holub          Long Island University       1.0   48.0   \n",
+       "\n",
+       "   Year  Pick  \n",
+       "0  1947     1  \n",
+       "1  1947     2  \n",
+       "2  1947     3  \n",
+       "3  1947     4  \n",
+       "4  1947     5  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Team</th>\n      <th>Player</th>\n      <th>College</th>\n      <th>Play_Yrs</th>\n      <th>Games</th>\n      <th>Year</th>\n      <th>Pick</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PIT</td>\n      <td>Clifton McNeeley</td>\n      <td>University of Texas at El Paso</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1947</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>TRH</td>\n      <td>Glen Selbo</td>\n      <td>University of Wisconsin</td>\n      <td>1.0</td>\n      <td>13.0</td>\n      <td>1947</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>BOS</td>\n      <td>Bulbs Ehlers</td>\n      <td>Purdue University</td>\n      <td>2.0</td>\n      <td>99.0</td>\n      <td>1947</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PRO</td>\n      <td>Walt Dropo</td>\n      <td>University of Connecticut</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1947</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NYK</td>\n      <td>Dick Holub</td>\n      <td>Long Island University</td>\n      <td>1.0</td>\n      <td>48.0</td>\n      <td>1947</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "draft.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# exporting nba draft csv to html\n",
+    "draft.to_html(\"draft.htm\", index=False)\n",
+    "html_file = draft.to_html()"
    ]
   },
   {
