sorted draft table to descending and filtered for yeart > 1990.  Also sorted nba finals table and added hedlines for each dataframe table webpage

--- a/nba_finals.ipynb
+++ b/nba_finals.ipynb
@@ -424,40 +424,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  Team            Player                         College  Play_Yrs  Games  \\\n",
-       "0  PIT  Clifton McNeeley  University of Texas at El Paso       NaN    NaN   \n",
-       "1  TRH        Glen Selbo         University of Wisconsin       1.0   13.0   \n",
-       "2  BOS      Bulbs Ehlers               Purdue University       2.0   99.0   \n",
-       "3  PRO        Walt Dropo       University of Connecticut       NaN    NaN   \n",
-       "4  NYK        Dick Holub          Long Island University       1.0   48.0   \n",
+       "     Team          Player                            College  Play_Yrs  Games  \\\n",
+       "7903  PHO   Deandre Ayton              University of Arizona       1.0    9.0   \n",
+       "7904  SAC   Marvin Bagley                    Duke University       1.0   10.0   \n",
+       "7905  ATL     Luka Doncic                                NaN       1.0    9.0   \n",
+       "7906  MEM   Jaren Jackson          Michigan State University       1.0    8.0   \n",
+       "7907  DAL      Trae Young             University of Oklahoma       1.0    9.0   \n",
+       "...   ...             ...                                ...       ...    ...   \n",
+       "6378  PHO     Joey Wright      University of Texas at Austin       NaN    NaN   \n",
+       "6379  HOU       Zan Tabak                                NaN       6.0  247.0   \n",
+       "6380  LAL   Anthony Jones            Oral Roberts University       NaN    NaN   \n",
+       "6381  NJN      Von McDade  University of Wisconsin-Milwaukee       NaN    NaN   \n",
+       "6382  POR  Marcus Kennedy        Eastern Michigan University       NaN    NaN   \n",
        "\n",
-       "   Year  Pick  \n",
-       "0  1947     1  \n",
-       "1  1947     2  \n",
-       "2  1947     3  \n",
-       "3  1947     4  \n",
-       "4  1947     5  "
+       "      Year  Pick  \n",
+       "7903  2018     1  \n",
+       "7904  2018     2  \n",
+       "7905  2018     3  \n",
+       "7906  2018     4  \n",
+       "7907  2018     5  \n",
+       "...    ...   ...  \n",
+       "6378  1991    50  \n",
+       "6379  1991    51  \n",
+       "6380  1991    52  \n",
+       "6381  1991    53  \n",
+       "6382  1991    54  \n",
+       "\n",
+       "[1634 rows x 7 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Team</th>\n      <th>Player</th>\n      <th>College</th>\n      <th>Play_Yrs</th>\n      <th>Games</th>\n      <th>Year</th>\n      <th>Pick</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PIT</td>\n      <td>Clifton McNeeley</td>\n      <td>University of Texas at El Paso</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1947</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>TRH</td>\n      <td>Glen Selbo</td>\n      <td>University of Wisconsin</td>\n      <td>1.0</td>\n      <td>13.0</td>\n      <td>1947</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>BOS</td>\n      <td>Bulbs Ehlers</td>\n      <td>Purdue University</td>\n      <td>2.0</td>\n      <td>99.0</td>\n      <td>1947</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PRO</td>\n      <td>Walt Dropo</td>\n      <td>University of Connecticut</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1947</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NYK</td>\n      <td>Dick Holub</td>\n      <td>Long Island University</td>\n      <td>1.0</td>\n      <td>48.0</td>\n      <td>1947</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Team</th>\n      <th>Player</th>\n      <th>College</th>\n      <th>Play_Yrs</th>\n      <th>Games</th>\n      <th>Year</th>\n      <th>Pick</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7903</th>\n      <td>PHO</td>\n      <td>Deandre Ayton</td>\n      <td>University of Arizona</td>\n      <td>1.0</td>\n      <td>9.0</td>\n      <td>2018</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>7904</th>\n      <td>SAC</td>\n      <td>Marvin Bagley</td>\n      <td>Duke University</td>\n      <td>1.0</td>\n      <td>10.0</td>\n      <td>2018</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7905</th>\n      <td>ATL</td>\n      <td>Luka Doncic</td>\n      <td>NaN</td>\n      <td>1.0</td>\n      <td>9.0</td>\n      <td>2018</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7906</th>\n      <td>MEM</td>\n      <td>Jaren Jackson</td>\n      <td>Michigan State University</td>\n      <td>1.0</td>\n      <td>8.0</td>\n      <td>2018</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>7907</th>\n      <td>DAL</td>\n      <td>Trae Young</td>\n      <td>University of Oklahoma</td>\n      <td>1.0</td>\n      <td>9.0</td>\n      <td>2018</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>6378</th>\n      <td>PHO</td>\n      <td>Joey Wright</td>\n      <td>University of Texas at Austin</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1991</td>\n      <td>50</td>\n    </tr>\n    <tr>\n      <th>6379</th>\n      <td>HOU</td>\n      <td>Zan Tabak</td>\n      <td>NaN</td>\n      <td>6.0</td>\n      <td>247.0</td>\n      <td>1991</td>\n      <td>51</td>\n    </tr>\n    <tr>\n      <th>6380</th>\n      <td>LAL</td>\n      <td>Anthony Jones</td>\n      <td>Oral Roberts University</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1991</td>\n      <td>52</td>\n    </tr>\n    <tr>\n      <th>6381</th>\n      <td>NJN</td>\n      <td>Von McDade</td>\n      <td>University of Wisconsin-Milwaukee</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1991</td>\n      <td>53</td>\n    </tr>\n    <tr>\n      <th>6382</th>\n      <td>POR</td>\n      <td>Marcus Kennedy</td>\n      <td>Eastern Michigan University</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1991</td>\n      <td>54</td>\n    </tr>\n  </tbody>\n</table>\n<p>1634 rows × 7 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 53
     }
    ],
    "source": [
-    "draft.head()"
+    "draft = draft.sort_values(by=['Year','Pick'], ascending=[False, True])\n",
+    "# draft = draft.sort_values(by='Pick')\n",
+    "draft = draft[draft['Year'] > 1990]\n",
+    "draft"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
