added roster_stats.htm which shows how many appearances, wins and losses each player had during the period

--- a/team_roster.ipynb
+++ b/team_roster.ipynb
@@ -450,6 +450,7 @@
     }
    ],
    "source": [
+    "# sort finals roster by year and team\n",
     "finals_roster = finals_roster.sort_values(by=['Year','Team'], ascending=False)\n",
     "finals_roster"
    ]
@@ -460,6 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export dataframes to csv\n",
     "finals_roster.to_csv('finals_roster.csv')\n",
     "winners_roster.to_csv('winners_roster.csv')\n",
     "losers_roster.to_csv('losers_roster.csv')"
@@ -467,33 +469,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "LeBron James       6\n",
-       "Dwyane Wade        5\n",
-       "Udonis Haslem      5\n",
-       "James Jones        5\n",
-       "Manu Ginóbili      4\n",
-       "                  ..\n",
-       "Peja Stojaković    1\n",
-       "J.R. Giddens       1\n",
-       "Daniel Gibson      1\n",
-       "Lester Hudson      1\n",
-       "J.J. Barea         1\n",
-       "Name: Player, Length: 244, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
+   "outputs": [],
    "source": [
-    "finals_roster['Player'].value_counts()"
+    "# find how many times each player has appeared in finals\n",
+    "finals_appearance = finals_roster['Player'].value_counts()"
    ]
   },
   {
@@ -502,8 +483,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# send dataframe to html for webpage\n",
     "finals_roster.to_html(\"finals_roster.htm\", index=False)\n",
     "html_file = finals_roster.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find how many wins each player has\n",
+    "finals_wins = finals_roster[finals_roster['Result'] == 'win'].groupby('Player')['Result'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Player\n",
+       "Adam Morrison          2\n",
+       "Alexis Ajinça          1\n",
+       "Alonzo Mourning        1\n",
+       "Andre Iguodala         1\n",
+       "Andrew Bogut           1\n",
+       "                      ..\n",
+       "Trevor Ariza           1\n",
+       "Tyson Chandler         1\n",
+       "Udonis Haslem          3\n",
+       "Vladimir Radmanović    1\n",
+       "Wayne Simien           1\n",
+       "Name: Result, Length: 139, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "finals_wins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Player\nA.J. Price             1\nAdonal Foyle           1\nAdrian Griffin         1\nAlex Kirk              1\nAnderson Varejão       2\n                      ..\nTyronn Lue             1\nUdonis Haslem          2\nVladimir Radmanović    1\nWill Cherry            1\nZydrunas Ilgauskas     2\nName: Result, Length: 163, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find how many losses each player has\n",
+    "finals_lost = finals_roster[finals_roster['Result'] == 'lost'].groupby('Player')['Result'].count()\n",
+    "print(finals_lost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframes for each series\n",
+    "df_appear = pd.Series(finals_appearance, name='Finals')\n",
+    "df_win = pd.Series(finals_wins, name='Won')\n",
+    "df_lost = pd.Series(finals_lost, name='Lost')\n",
+    "# pd.concat([finals_lost, finals_wins], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine all three series into one dataframe and replace NaN with zero\n",
+    "roster_stats = pd.concat([df_appear, df_win, df_lost], axis=1)\n",
+    "roster_stats = roster_stats.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                 Finals  Won  Lost\n",
+       "LeBron James          6  2.0   4.0\n",
+       "James Jones           5  2.0   3.0\n",
+       "Dwyane Wade           5  3.0   2.0\n",
+       "Udonis Haslem         5  3.0   2.0\n",
+       "Mike Miller           4  2.0   2.0\n",
+       "...                 ...  ...   ...\n",
+       "Antonio McDyess       1  0.0   1.0\n",
+       "Peja Stojaković       1  1.0   0.0\n",
+       "J.R. Giddens          1  0.0   1.0\n",
+       "Daniel Gibson         1  0.0   1.0\n",
+       "J.J. Barea            1  1.0   0.0\n",
+       "\n",
+       "[244 rows x 3 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Finals</th>\n      <th>Won</th>\n      <th>Lost</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>LeBron James</th>\n      <td>6</td>\n      <td>2.0</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>James Jones</th>\n      <td>5</td>\n      <td>2.0</td>\n      <td>3.0</td>\n    </tr>\n    <tr>\n      <th>Dwyane Wade</th>\n      <td>5</td>\n      <td>3.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>Udonis Haslem</th>\n      <td>5</td>\n      <td>3.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>Mike Miller</th>\n      <td>4</td>\n      <td>2.0</td>\n      <td>2.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>Antonio McDyess</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>Peja Stojaković</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>J.R. Giddens</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>Daniel Gibson</th>\n      <td>1</td>\n      <td>0.0</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>J.J. Barea</th>\n      <td>1</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>244 rows × 3 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "# sort df by how many finals player has appeared in\n",
+    "roster_stats = roster_stats.sort_values(by='Finals', ascending=False)\n",
+    "roster_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roster_stats.to_html(\"roster_stats.htm\")\n",
+    "html_file = roster_stats.to_html()"
    ]
   },
   {
